@@ -1,3 +1,10 @@
+2008-08-15  Dan Williams  <dcbw@redhat.com>
+
+	* src/wireless-security/eap-method-ttls.c
+	  src/wireless-security/ws-wep-key.c
+		- (eap_method_ttls_new, key_index_combo_changed_cb, ws_wep_key_new): add
+			missing change notifiers (bgo #547709)
+
 2008-08-14  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet-device-cdma.c
